[#34073] make sure hidden content has enough contrast

--- a/themes/agov/agov_whitlam/sass/components/header/_header.scss
+++ b/themes/agov/agov_whitlam/sass/components/header/_header.scss
@@ -9,12 +9,16 @@
 .header,
 %header {
   background: color(header-background);
-  color: color(header-color);
   position: relative;
   margin-bottom: 80px;
 
   @include respond-to('medium') {
     margin-bottom: 0;
+  }
+
+  &,
+  a {
+    color: color(header-color);
   }
 }
 
